$Id$

2003.01.22
 * Support for interaction between GtkTextBuffer and GtkClipboard. (Benjamin)

2002.01.16
 * fix memory management in ml_gdk.h
 * GObject and GtkObject are different! fix gtk.ml

2002.01.15
  * added GtkAccelGroup and GtkClipboard support (Jacques)
  * suppress Gdk.Tags.selection (use Gdk.Atom.primary/secondary/clipboard)
  * time is 32-bit! (Benjamin)

In lablgtk2-alpha:

2002.12.26
  * lots of changes to adapt to gtk2
  * callback handling and property support completely rewritten
  * many API changes
  * new text widget interfaced by Benjamin Monate
  * Gtk2 automatically calls setlocale in gtk_init, but we
    revert LC_NUMERIC to C immediately after

In trunk:

2002.11.18
  * added META (by Stefano Zacchiroli)
  * fixed applications/camlirc (Tim Freeman)

2002.10.31
  * add gdk_property_*

2002.10.26
  * fix GdkPixbuf.create_pixmap
  * add GdkEventClient (requested by Didier le Botlan)

2002.08.26
  * add Gdk.Window.get_pointer_location (Tim Freeman)

In lablgtk-1.2.5:

2002.08.19
  * add GWindow.toplevel (Tim Freeman report)

2002.08.09
  * Makefile and tictactoe patches (Tim Freeman)

2002.08.07
  * add GtkThread.sync and GtkThread.async to post calls to GTK from
    different threads on windows (GTK/win32 is not reentrant)

In lablgtk-1.2.4:

2002.07.15
  * add dll support to windows port

2002.07.13
  * install dlls to stublibs directory

2002.07.06
  * add g_io_add_watch support in GMain.Io (requested by Maxence)

2002.07.04
  * add rpm spec (Ben Martin)

2002.07.01
  * add GdkPixbuf support

2002.06.20
  * add all color settings in GtkData.Style/GObj.style
    (requested by N. Raynaud)
  * add GMain.Rc

2002.06.19
  * add Gpointer.region, to handle bigarray/string/Raw.t in an uniform way

2002.06.18
  * add Gdk.Rgb.draw_image (requested by F. Dellaert)

2002.05.30
  * change typing of GtkSignal.t

2002.05.28
  * move GtkData.Selection to GtkBase.Selection
  * add actual selection handling
  * add Gdk.Atom

2002.04.30